# phanes

./: .gitignore  Dockerfile  LICENSE  README.md  demo.py  docker-compose.yml  fly.toml  generate_whitepaper.py  pyproject.toml
aeos/: __init__.py  bft_ledger.py  bulletproofs_ffi.py  contracts.py  crypto_primitives.py  disputes.py  graph_intelligence.py  identity.py  ledger.py  mcp_server.py  ml_engine.py  persistence.py  risk.py  server.py  settlement.py  state_channels.py  threshold_crypto.py  tokenization.py  usdc_settlement.py
bulletproofs/: Cargo.toml
bulletproofs/src/: lib.rs  main.rs
docs-portal/: README.md  overview.md
docs-portal/architecture/: data-flows-and-invariants.md  layered-stack.md
docs-portal/cryptography/: primitives-proofs-threshold.md
docs-portal/formal-verification/: tla-plus-specs.md
docs-portal/industrial/: compliance-controls-roadmap.md  slos-incident-response-roadmap.md  supply-chain-provenance-roadmap.md
docs-portal/integration/: mcp-server.md  rest-api.md  typescript-sdk.md
docs-portal/operations/: deployment-docker-fly.md
docs-portal/protocol/: consensus-ledger.md  contracts-escrow.md  disputes.md  identity.md  module-matrix.md  persistence.md  risk-ml-graph.md  settlement.md  tokenization-state-channels.md
docs-portal/reference/: glossary.md  repository-source-map.md
docs-site/: README.md  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
docs-site/src/: App.tsx  index.css  main.tsx
docs-site/src/components/docs/: CodeBlock.tsx  CopyUrlProvider.tsx  MarkdownDoc.tsx  MermaidDiagram.tsx  SectionPermalink.tsx  TableOfContents.tsx  shikiSingleton.ts
docs-site/src/components/layout/: AppShell.tsx  DocHeader.tsx  Footer.tsx  MobileDrawer.tsx  Sidebar.tsx
docs-site/src/components/search/: CommandPalette.tsx  SearchProvider.tsx
docs-site/src/config/: navigation.ts
docs-site/src/context/: MainScrollContext.tsx
docs-site/src/hooks/: useActiveHeading.ts
docs-site/src/lib/: breadcrumb.ts  content.ts  headings.ts  searchIndex.ts
docs-site/src/pages/: DocPage.tsx
docs-site/src/theme/: ThemeProvider.tsx
formal/: AEOSContract.tla  AEOSPBFT.tla
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/components/: Navigation.tsx  SceneRenderer.tsx  WelcomeScreen.tsx
frontend/src/components/scenes/: Scene00_TheProblem.tsx  Scene01_TheSolution.tsx  Scene02_AgentGenesis.tsx  Scene03_DelegationChain.tsx  Scene04_ContractFormation.tsx  Scene05_MultiSigActivation.tsx  Scene06_RiskAssessment.tsx  Scene07_WorkExecution.tsx  Scene08_ProofVerification.tsx  Scene09_EscrowRelease.tsx  Scene10_BFTConsensus.tsx  Scene11_DisputeResolution.tsx  Scene12_AnomalyDetection.tsx  Scene13_GraphIntelligence.tsx  Scene14_SettlementFlow.tsx  Scene15_ThresholdCrypto.tsx  Scene16_FullLifecycle.tsx  Scene17_TheFuture.tsx
frontend/src/components/shared/: AgentAvatar.tsx  CryptoHash.tsx  DataFlow.tsx  InfoPanel.tsx  ParticleField.tsx  ProgressTimeline.tsx  SceneContainer.tsx  StatusBadge.tsx
frontend/src/hooks/: useSimulation.ts  useTypewriter.ts
frontend/src/utils/: animations.ts  constants.ts
tests/: test_all.py
ts-sdk/: package-lock.json  package.json  tsconfig.json
ts-sdk/src/: client.ts  contracts.ts  crypto.ts  identity.ts  index.ts
ts-sdk/tests/: test.js
