[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "phanes"
version = "0.3.1"
description = "AEOS Protocol — The economic operating system for autonomous AI agents"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.10"
authors = [
    { name = "Phanes Labs" },
]
keywords = [
    "ai-agents", "autonomous-agents", "machine-economy", "agent-identity",
    "smart-contracts", "dispute-resolution", "cryptography", "KYA",
    "agent-commerce", "threshold-cryptography", "anomaly-detection",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography>=42.0.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
server = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.0.0",
]
settlement = [
    "stripe>=9.0.0",
]
ml = [
    "scikit-learn>=1.4.0",
    "scipy>=1.12.0",
    "networkx>=3.2",
]
dev = [
    "pytest>=8.0.0",
    "httpx>=0.27.0",
]
all = ["phanes[server,settlement,ml,dev]"]

[project.urls]
Homepage = "https://phanes.app"
Repository = "https://github.com/tofaelttk/Phanes"
Documentation = "https://github.com/tofaelttk/Phanes/blob/main/README.md"

[project.scripts]
phanes-server = "aeos.server:main"
phanes-mcp = "aeos.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["aeos"]

[tool.pytest.ini_options]
testpaths = ["tests"]
